--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_..
 CLERK_SECRET_KEY=sk_test_...
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+mongodb+srv://henriquetkapema:J6q7sU56VpCl5jjx@cluster0.mczzm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
