--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
   "extends": "next/core-web-vitals",
   "rules": { 
-    "react/no-unescaped-entities": 0,
-    "@typescript-eslint/ban-ts-comment": "off"
+    "react/no-unescaped-entities": 0
+    
   }
 }
